--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: >
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: ""
-url: "http://yourdomain.com"
+url: "http://mkordas.github.io"
 twitter_username: jekyllrb
 github_username:  jekyll
 
