--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@ description: >
   Google search results) and in your feed.xml site description.
 baseurl: ""
 url: "http://mkordas.github.io"
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: michal_kordas
+github_username:  mkordas
 
 # Build settings
 markdown: kramdown
