--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,15 @@
 title: Michal Kordas Blog
 email: me@michalkordas.com
 description: >
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I'm quality maniac with passion about Java, Groovy, JVM and fancy tools
+  that help to test code in smart, fluent and expressive way. I love bringing
+  feedback loops to the micro-level. My main area of interest is Agile Testing.
+  Currently I'm working as a fully cross-functional member of a strongly agile
+  team as a developer and a „quality guard” with particular focus on
+  well-written code, good requirements and efficient process. Unlike majority of
+  QA’s, I believe that being a truly good QA engineer means being, first of all,
+  a software developer that has all the knowledge needed to deliver
+  production-quality code with some additional quality-related skills.
 baseurl: ""
 url: "http://mkordas.github.io"
 twitter_username: michal_kordas
