--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >
   Blog about Java, Groovy, JVM, IntelliJ IDEA and bringing feedback loops to the
   micro-level.
 baseurl: ""
-url: "http://mkordas.github.io"
+url: "http://michalkordas.com"
 twitter_username: michal_kordas
 github_username:  mkordas
 
