--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ url: "http://michalkordas.com"
 twitter_username: michal_kordas
 github_username: mkordas
 
+excerpt_separator: <!-- more -->
 highlighter: pygments
 
 # Build settings
